--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -32,7 +32,7 @@
 					 	<div class="col-md-3 col-sm-6">
 					 		<div class="greybg videoplaceholder" style="background-image: url({{video.img_url}})">
 							</div>
-							<h2><a class="js-video" href="{{video.link}}" target="_blank">{{video.title}}</a></h2>
+							<h2><a class="js-video modalButton" data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
 					 	</div>
 					 	{% endfor %}
 					 	
@@ -47,7 +47,7 @@
 					 	<div class="col-md-3 col-sm-6">
 					 		<div class="greybg videoplaceholder" style="background-image: url({{video.img_url}})">
 							</div>
-							<h2><a href="{{video.link}}" data-url="{{video.link}}" target="_blank">{{video.title}}</a></h2>
+							<h2><a class="js-video modalButton" data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
 					 	</div>
 					 	{% endfor %}
 					 	
@@ -62,7 +62,7 @@
 					 	<div class="col-md-3 col-sm-6">
 					 		<div class="greybg videoplaceholder" style="background-image: url({{video.img_url}})">
 							</div>
-							<h2><a href="{{video.link}}" target="_blank">{{video.title}}</a></h2>
+							<h2><a class="js-video modalButton" data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
 					 	</div>
 					 	{% endfor %}
 					 	
@@ -73,11 +73,27 @@
 					 		<h3 >Business & Sport</h3>
 					 		<hr>
 					 	</div>
-					 	{% for video in politic_videos %}
+					 	{% for video in politic_videos|slice:'0:1' %}
 					 	<div class="col-md-3 col-sm-6">
 					 		<div class="greybg videoplaceholder" style="background-image: url({{video.img_url}})">
 							</div>
-							<h2><a href="{{video.link}}" target="_blank">{{video.title}}</a></h2>
+							<h2><a class="js-video modalButton" data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
+					 	</div>
+					 	{% endfor %}
+					 	
+
+					 </div>
+					 
+					 <div class="row categories">
+					 	<div class="col-md-12 ">
+					 		<h3 >Success Story</h3>
+					 		<hr>
+					 	</div>
+					 	{% for video in politic_videos|slice:'0:1' %}
+					 	<div class="col-md-3 col-sm-6">
+					 		<div class="greybg videoplaceholder" style="background-image: url({{video.img_url}})">
+							</div>
+							<h2><a class="js-video modalButton" data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
 					 	</div>
 					 	{% endfor %}
 					 	
@@ -95,4 +111,6 @@
 
 			</div>
 		</div>
+
+		
 {% endblock %}
