--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -100,7 +100,7 @@
 						<div class="col-sm-12 col-md-12" style="margin-bottom:30px">
 							<div class="greybg videoplaceholder" style="background-image: url({{video.img_url}})">
 							</div>
-							<h2><a class="js-video modalButton" data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
+							<h2><a class="js-video modalButton" href="#"  data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
 						</div>
 						{% endfor %}
 					</div>
@@ -109,7 +109,7 @@
 						<div class="col-sm-12 col-md-12"  style="margin-bottom:30px">
 							<div class="greybg videoplaceholder" style="background-image: url({{video.img_url}})">
 							</div>
-							<h2><a class="js-video modalButton" data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
+							<h2><a class="js-video modalButton" href="#"  data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
 						</div>
 						{% endfor %}
 						
