--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -32,7 +32,7 @@
 					 	<div class="col-md-3 col-sm-6">
 					 		<div class="greybg videoplaceholder" style="background-image: url({{video.img_url}})">
 							</div>
-							<h2><a class="js-video modalButton" data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
+							<h2><a class="js-video modalButton" href="#" data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
 					 	</div>
 					 	{% endfor %}
 					 	
@@ -47,7 +47,7 @@
 					 	<div class="col-md-3 col-sm-6">
 					 		<div class="greybg videoplaceholder" style="background-image: url({{video.img_url}})">
 							</div>
-							<h2><a class="js-video modalButton" data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
+							<h2><a class="js-video modalButton" href="#"  data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
 					 	</div>
 					 	{% endfor %}
 					 	
@@ -62,7 +62,7 @@
 					 	<div class="col-md-3 col-sm-6">
 					 		<div class="greybg videoplaceholder" style="background-image: url({{video.img_url}})">
 							</div>
-							<h2><a class="js-video modalButton" data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
+							<h2><a class="js-video modalButton" href="#"  data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
 					 	</div>
 					 	{% endfor %}
 					 	
@@ -77,7 +77,7 @@
 					 	<div class="col-md-3 col-sm-6">
 					 		<div class="greybg videoplaceholder" style="background-image: url({{video.img_url}})">
 							</div>
-							<h2><a class="js-video modalButton" data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
+							<h2><a class="js-video modalButton" href="#"  data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
 					 	</div>
 					 	{% endfor %}
 					 	
@@ -93,7 +93,7 @@
 					 	<div class="col-md-3 col-sm-6">
 					 		<div class="greybg videoplaceholder" style="background-image: url({{video.img_url}})">
 							</div>
-							<h2><a class="js-video modalButton" data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
+							<h2><a href="#"  class="js-video modalButton" data-src="http://www.youtube.com/embed/{{video.video_id}}?rel=0&wmode=transparent&fs=0"  data-target="#myModal" data-toggle="modal" target="_blank">{{video.title}}</a></h2>
 					 	</div>
 					 	{% endfor %}
 					 	
