--- a/main/static/styles.css
+++ b/main/static/styles.css
@@ -175,3 +175,10 @@ border-top: 1px solid var(--yt-border-color);
     display: none !important;
   }
 }
+
+@media only screen and (min-width: 760px){
+  .categories h2 {
+    font-size: 20px;
+    
+}
+}
